RESOLVED FIXED169034
Incorrect RELEASE_ASSERT in JSGlobalObject::addStaticGlobals()
https://bugs.webkit.org/show_bug.cgi?id=169034
Summary Incorrect RELEASE_ASSERT in JSGlobalObject::addStaticGlobals()
Tomas Popela
Reported 2017-03-01 06:02:55 PST
There is an incorrect RELEASE_ASSERT in JSGlobalObject::addStaticGlobals(GlobalPropertyInfo* globals, int count): RELEASE_ASSERT(offset = startOffset + i); it should not assign to offset, but compare to offset.
Attachments
Patch (1.64 KB, patch)
2017-03-01 06:04 PST, Tomas Popela
no flags
Tomas Popela
Comment 1 2017-03-01 06:04:38 PST
Mark Lam
Comment 2 2017-03-01 09:49:23 PST
Comment on attachment 303064 [details] Patch r=me
Tomas Popela
Comment 3 2017-03-02 01:42:18 PST
Comment on attachment 303064 [details] Patch Clearing flags on attachment: 303064 Committed r213275: <http://trac.webkit.org/changeset/213275>
Tomas Popela
Comment 4 2017-03-02 01:42:26 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2017-03-10 12:09:35 PST
Note You need to log in before you can comment on or make changes to this bug.