Incorrect RELEASE_ASSERT in JSGlobalObject::addStaticGlobals() https://bugs.webkit.org/show_bug.cgi?id=169034

Reviewed by Mark Lam.

It should not assign to offset, but compare to offset.

* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::addStaticGlobals):

Canonical link: https://commits.webkit.org/186070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213275 268f45cc-cd09-0410-ab3c-d52691b4dbfc